# RM_AUTO_AIM_2025_7

./: .gitignore  README.md
src/rm_armor_detect/: CMakeLists.txt  package.xml
src/rm_armor_detect/config/: armor_detect_params.yaml
src/rm_armor_detect/include/rm_armor_detect/: armor_types.hpp  car_detector.hpp  number_classifier.hpp  openvino_armor_detector.hpp  simple_lights_detector.hpp  video_subscriber_node.hpp
src/rm_armor_detect/models/armor/: armor.onnx
src/rm_armor_detect/src/: car_detector.cpp  lights_detector.cpp  number_classifier.cpp  openvino_armor_detector.cpp  video_subscriber_main.cpp  video_subscriber_node.cpp
src/rm_armor_tracker/: CMakeLists.txt  package.xml
src/rm_rune_detect/: CMakeLists.txt  package.xml  run_rune_detect.sh  run_rune_detect_optimized.sh
src/rm_rune_detect/include/rm_rune_detect/: common_types.hpp  openvino_detect.hpp  preprocess.hpp  rune_detect_node.hpp
src/rm_rune_detect/launch/: rune_detect.launch.py
src/rm_rune_detect/src/: openvino_detect.cpp  preprocess.cpp  rune_detect_main.cpp  rune_detect_node.cpp
src/ros2-hik-camera-main/: CMakeLists.txt
src/ros2-hik-camera-main/config/: camera_params_example.yaml
src/video_trial_node/: CMakeLists.txt  package.xml  run_video_publisher.sh
src/video_trial_node/include/video_trial_node/: video_publisher_node.hpp
src/video_trial_node/launch/: video_publisher.launch.py
src/video_trial_node/src/: video_publisher_main.cpp  video_publisher_node.cpp
